Convert list.of to java 8